--- a/test/yusun/my_mlops/airflow/Dockerfile
+++ b/test/yusun/my_mlops/airflow/Dockerfile
@@ -4,6 +4,8 @@ USER root
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     git \
+    libmagic1 \
+    libmagic-dev \
     && rm -rf /var/lib/apt/lists/*
 
 USER airflow
