--- a/test/yusun/my_mlops/docker-compose.yml
+++ b/test/yusun/my_mlops/docker-compose.yml
@@ -71,7 +71,7 @@ services:
       AIRFLOW_URL: http://airflow:8080
       AIRFLOW_USERNAME_FILE: /run/secrets/airflow_user
       AIRFLOW_PASSWORD_FILE: /run/secrets/airflow_password
-      DAG_ID: video_processing_dag
+      DAG_ID: pre_processing_dag
     secrets:
       - airflow_user
       - airflow_password
