--- a/test/yusun/my_mlops/webserver/Dockerfile
+++ b/test/yusun/my_mlops/webserver/Dockerfile
@@ -4,7 +4,11 @@ WORKDIR /app
 
 COPY app.py .
 
-RUN pip install flask gunicorn requests minio
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libpq-dev \
+    gcc
 
-CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:8000", "app:app"]
+RUN pip install flask gunicorn requests minio psycopg2-binary
+
+CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:8000", "app:app", "--access-logfile", "-", "--error-logfile", "-"]
 
