--- a/test/yusun/my_mlops/webserver/Dockerfile
+++ b/test/yusun/my_mlops/webserver/Dockerfile
@@ -2,13 +2,12 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-COPY app.py .
-
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq-dev \
     gcc
 
 RUN pip install flask gunicorn requests minio psycopg2-binary
 
-CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:8000", "app:app", "--access-logfile", "-", "--error-logfile", "-"]
+CMD ["flask", "run", "--host=0.0.0.0", "--port=8000"]
+#CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:8000", "app:app", "--access-logfile", "-", "--error-logfile", "-"]
 
