Feat: Add login logic and tag preprocessing logic
Signed-off-by: Yusun Choi <tanks2438@outlook.kr>

--- a/mlops/airflow/Dockerfile
+++ b/mlops/airflow/Dockerfile
@@ -6,6 +6,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     git \
     libmagic1 \
     libmagic-dev \
+    libimage-exiftool-perl \
+    ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
 USER airflow
