--- a/mlops/webserver/Dockerfile
+++ b/mlops/webserver/Dockerfile
@@ -4,9 +4,12 @@ WORKDIR /app
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq-dev \
-    gcc
+    gcc \
+    mecab \
+    libmecab-dev \
+    mecab-ipadic-utf8
 
-RUN pip install flask gunicorn requests minio psycopg2-binary
+RUN pip install flask gunicorn requests minio psycopg2-binary flask-cors werkzeug pyjwt python-mecab-ko
 
 CMD ["flask", "run", "--host=0.0.0.0", "--port=8000"]
 #CMD ["gunicorn", "-w", "4", "-b", "0.0.0.0:8000", "app:app", "--access-logfile", "-", "--error-logfile", "-"]
