--- a/mlops/airflow/requirements.txt
+++ b/mlops/airflow/requirements.txt
@@ -2,8 +2,5 @@ requests
 minio
 pendulum==2.1.2
 python-magic
-whisper
-openai
+faster-whisper
 ffmpeg
-git+https://github.com/openai/whisper.git
-transformers
