--- a/mlops/front/package.json
+++ b/mlops/front/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
     "d3": "^7.9.0",
     "d3-cloud": "^1.2.7",
     "leaflet": "^1.9.4",
